ingressroutes.traefik.containo.us-ghost.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"traefik.containo.us/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"ghost","namespace":"sodermalmsskolan-com"},"spec":{"entryPoints":["https"],"routes":[{"kind":"Rule","match":"Host(`xn--sdermalmsskolan-8sb.com`) \u0026\u0026 PathPrefix(`/blogg`)","services":[{"name":"ghost","port":2368}]},{"kind":"Rule","match":"Host(`xn--sdermalmsskolan-8sb.com`)","middlewares":[{"name":"blog-redirect"}],"services":[{"name":"ghost","port":2368}]}],"tls":{"certResolver" [...]
  creationTimestamp: "2020-01-20T20:10:46Z"
  generation: 6
  name: ghost
  namespace: sodermalmsskolan-com
  resourceVersion: "224080"
  selfLink: /apis/traefik.containo.us/v1alpha1/namespaces/sodermalmsskolan-com/ingressroutes/ghost
  uid: ec5f5480-6343-453c-bd03-6852ccd58133
spec:
  entryPoints:
  - https
  routes:
  - kind: Rule
    match: Host(`xn--sdermalmsskolan-8sb.com`) && PathPrefix(`/blogg`)
    services:
    - name: ghost
      port: 2368
  tls:
    certResolver: le
